[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.22.0-alpha3", optional = true }
glow = { version = "0.3.0-alpha3", default-features=false, features=["glutin"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = { version = "0.3.0-alpha3", default-features=false, features=["web-sys"] }
web_sys = { version = "0.3", package = "web-sys", features=["console"] }
wasm-bindgen = { version = "0.2" }
